Event listener - listen to event just like as click, cursor being move and etc. adding a function 'hello()' and calling it by event lister 'onclick'

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <h1>Hello there!</h1>
+    <button onclick="hello()">Click Here</button>
 </body>
 <!-- the process of code is from top to bottom, 
     if you put the script tag after head tag, 
     it will parse first then the page will load longer, that's why it is after body tag. -->
-<script>alert("Click Ok")</script>
+<script>
+function hello() {
+    alert("Click Ok")
+}</script>
 </html>
