Document Object Model (DOM) Manipulation - Changing <h1> to current value of the variable counter

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Count</title>
 </head>
 <body>
-    <h1>Hello there!</h1>
+    <h1>0</h1>
     <button onclick="count()">Count</button>
 </body>
 <!-- the process of code is from top to bottom, 
@@ -18,10 +18,19 @@
     // let: used to define a variable that is limited in scope to the current block such as a function or loop
     // const: used to define a value that will not change
     let counter = 0;
+
     function count() {
         counter++;
-        // counter = counter+1; this is the root, counter++; is just shortcut
-        alert(counter);
+        // counter = counter + 1; this is the root, counter++; is just shortcut
+        document.querySelector("h1").innerHTML = counter;
+        // select element h1 to display the current value of our variable counter
+    
+
+        if (counter % 10 === 0) {
+            alert(`Count is now ${counter}`);
+        }
+        // formatted string in python, using backticks instead of double or single quotation marks
+        // this is called templeted literal
     }
 </script>
 </html>
