--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>0</h1>
-    <button onclick="count()">Count</button>
+    <button>Count</button>
 </body>
 <!-- the process of code is from top to bottom, 
     if you put the script tag after head tag, 
@@ -25,12 +25,14 @@
         document.querySelector("h1").innerHTML = counter;
         // select element h1 to display the current value of our variable counter
     
-
         if (counter % 10 === 0) {
             alert(`Count is now ${counter}`);
         }
         // formatted string in python, using backticks instead of double or single quotation marks
         // this is called templeted literal
     }
+
+    document.querySelector('button').onclick = count;
+    // Find me the button of the page then onclick execute count function
 </script>
 </html>
