--- a/index.html
+++ b/index.html
@@ -13,26 +13,6 @@
 <!-- the process of code is from top to bottom, 
     if you put the script tag after head tag, 
     it will parse first then the page will load longer, that's why it is after body tag. -->
-<script>
-    // var: used to define a variable globally
-    // let: used to define a variable that is limited in scope to the current block such as a function or loop
-    // const: used to define a value that will not change
-    let counter = 0;
-
-    function count() {
-        counter++;
-        // counter = counter + 1; this is the root, counter++; is just shortcut
-        document.querySelector("h1").innerHTML = counter;
-        // select element h1 to display the current value of our variable counter
-    
-        if (counter % 10 === 0) {
-            alert(`Count is now ${counter}`);
-        }
-        // formatted string in python, using backticks instead of double or single quotation marks
-        // this is called templeted literal
-    }
-
-    document.querySelector('button').onclick = count;
-    // Find me the button of the page then onclick execute count function
-</script>
+<script src="counter.js"></script>
+<!-- src stands for source -->
 </html>
