adding reset button - localStorage.setItem/locatStorage.getItem

--- a/counter.html
+++ b/counter.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>0</h1>
-    <button>Count</button>
+    <button id="count">Count</button>
+    <button id="reset">Reset</button>
 </body>
 <!-- the process of code is from top to bottom, 
     if you put the script tag after head tag, 
