--- a/currencyExchange.html
+++ b/currencyExchange.html
@@ -7,7 +7,11 @@
     <title>Currency Exchange</title>
 </head>
 <body>
-    
+    <form>
+        <input type="text" id="currency" placeholder="Currency">
+        <input type="submit" value="Convert">
+    </form>
+    <div id="result"></div>
 </body>
 <script src="currency.js"></script>
 </html>
